survey-salesforce/salesforce-app/src/objects/SurveyMapping__c.object
<CustomObject>
    <fields>
        <fullName>MatchingField__c</fullName>
        <description>Set this field to prevent duplicated records. The system will check into the &quot;matching field&quot;, if the value for the &quot;matching field&quot; already exists it will update the record(not insert).</description>
        <inlineHelpText>Set this field to prevent duplicated records. The system will check into the &quot;matching field&quot;, if the value for the &quot;matching field&quot; already exists it will update the record(not insert).</inlineHelpText>
        <label>Matching Field</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectApiName__c</fullName>
        <description>The Api Name of the parent object of the fields, defined in the related QuestionMappings records, where its going to be store the mapping fields data</description>
        <label>Object Api Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Mappings</relationshipLabel>
        <relationshipName>Survey_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Survey Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SurveyMapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>